/*
  Rewards calculator

  API to show the rewards for customers based on recorded purchases.

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "models/reward.proto";

message Rewards {

  string customerId = 507442793;

  int32 totalRewardPointsForPastThreeMonths = 104237740;

  double totalPurchaseAmountForPastThreeMonths = 329367990;

  repeated Reward rewards = 26908454;

}
