/*
  Rewards calculator

  API to show the rewards for customers based on recorded purchases.

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools.services.rewardsservice;

import "google/protobuf/empty.proto";
import public "models/rewards.proto";

service RewardsService {
  rpc GetRewardsByCustomerId (GetRewardsByCustomerIdRequest) returns (Rewards);

  rpc PostRewardsByCustomerId (PostRewardsByCustomerIdRequest) returns (Rewards);

}

message GetRewardsByCustomerIdRequest {
  // customer id
  string customerId = 1;

}

message PostRewardsByCustomerIdRequest {
  // customer id
  string customerId = 1;

}

