/*
  Rewards calculator

  API to show the rewards for customers based on recorded purchases.

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Order {

  double purchaseAmount = 509000890;

  string itemName = 103589952;

  string itemDescription = 260958490;

}
